[package]
name = "tusk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
sysinfo = "0.30.7"
clap = { version = "4.5.7", features = ["derive", "env"] }
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["json", "bigdecimal", "uuid", "time", "postgres", "migrate", "runtime-tokio", "runtime-tokio-rustls"] }
tabled = { version = "0.15.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
toml = "0.8.14"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
